<resources>
    <string name="app_name">Shakti Kusum App</string>
    <string name="title_adhoc_order">Adhoc Order</string>
    <string name="hint_activity">Activity</string>
    <string name="hint_dsr">DSR Comment</string>
    <string name="hint_password">Password</string>
    <string name="btn_save_dsr"> Save</string>
    <string name="action_cart">View Cart </string>
    <string name="action_complaint_attachment">Attach PDF</string>
    <string name="action_complaint_add">Add complaint</string>
    <string name="create_pdf">Create PDF</string>
    <string name="merge_pdf">Merge PDF</string>
    <string name="merge_file_select">Select a file</string>
    <string name="select_text_file">Select Text File</string>
    <string name="select_pdf_file">Select PDF File</string>
    <string name="err_msg_name">Enter User Name</string>
    <string name="err_msg_mobile">Enter Mobile Number</string>
    <string name="err_msg_mobile_invalid">Enter 10 digit Mobile Number</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="crash_toast_text">Ooooops ! App crashed, a report will be sent to developer to fix the issue !</string>
    <string name="yes">Yes</string>
    <string name="new1">New</string>
    <string name="old">Old</string>
    <string name="rcc">RCC</string>
    <string name="good">Good</string>
    <string name="moderate">Moderate</string>
    <string name="poor">Poor</string>
    <string name="gi">GI</string>
    <string name="other">Other</string>
    <string name="no">No</string>
    <string name="one">1Φ</string>
    <string name="three">3Φ</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_offline_data">Offline Data</string>
    <string name="nav_item_iv_curve">IV Curve Report </string>
    <string name="nav_item_controller_datasheet">Controller Data sheet </string>
    <string name="nav_item_lr_submit">LR Data Submission </string>
    <string name="nav_item_invoice">Vendor Invoice Submission </string>
    <string name="action_signout">Sign Out</string>
    <string name="action_sync_all">Sync All</string>
    <string name="action_state">Sync State Data</string>
    <string name="action_sync_offline">Sync Offline Data</string>
    <string name="action_rejected">Rejected Data</string>
    <string name="action_target_menu">Sync Data</string>
    <string name="action_file_menu">Sync Data</string>
    <string name="action_file_detail_menu">Sync Data</string>
    <string name="action_route_map_menu">Show on Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_number_label">"customer number  : "</string>
    <string name="customer_name_label">"customer name  : "</string>
    <string name="customer_category_label">"customer category  : "</string>
    <string name="customer_place_label">"customer place  : "</string>
    <string name="customer_distance_label">"customer distance  : "</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shakti Pumps</string>
    <string name="nav_header_subtitle">Pumping Life</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Signout</string>
    <string name="menu_home">Home</string>
    <string name="menu_offline">Offline Data</string>
    <string name="menu_simrep">Sim Replacement</string>
    <string name="menu_devicestatus">Device Status</string>
    <string name="menu_rejectsites">Reject Sites</string>
    <string name="complaint_installation">Complaint Before Installation</string>
    <string name="complain_delivery_status">Complaint Delivery Status</string>
    <string name="beneficiary_registration_form">Beneficiary Registration Form</string>
    <string name="menu_logout">Signout</string>
    <string name="menu_audit">Site Audit</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_login">Login</string>
    <string name="action_unsync_menu">Sync Offline Data</string>
    <string name="action_unload">Unload List</string>
    <string name="rationale_doc_picker" translatable="false">We need this pemission to read documents from device.</string>
    <string name="file_thumbnail" translatable="false">File thumbnail</string>
    <string name="path" translatable="false">Path : %1$s</string>
    <string name="serial_id">Serial Id</string>
    <string name="family_Id">Family Id</string>
    <string name="applicant_father_name">Applicant\'s Father Name</string>
    <string name="applicant_mobile_no">Applicant\'s Mobile Number</string>
    <string name="applicant_village">Applicant\'s Village</string>
    <string name="applicant_block">Applicant\'s Block</string>
    <string name="applicant_tehsil">Applicant\'s Tehsil</string>
    <string name="applicant_district">Applicant\'s District</string>
    <string name="pump_capacity">Pump Capacity(HP)</string>
    <string name="pump_ad_dc">Pump AC/DC</string>
    <string name="pump_type">Pump Type</string>
    <string name="controller_type">Controller Type</string>
    <string name="applicant_bank_account">Applicant\'s Bank Account No.</string>
    <string name="applicant_IFSC">Applicant\'s IFSC Code</string>
    <string name="beneficiary_registration_list">Beneficiary Registration List</string>
    <string name="acknowledgement_challan_details">Acknowledgement challan Details</string>
    <string name="fard_land_proof">Fard (Land proof)</string>
    <string name="beneficiary_id_proof">Beneficiary ID Proof (Aadhar card)</string>
    <string name="payment_receipt">Payment Receipt</string>
    <string name="attachment5">Attachment 5</string>
    <string name="attachment6">Attachment 6</string>
    <string name="enter_serial_id">Please Enter Serial ID</string>
    <string name="enter_family_id">Please Enter Family ID</string>
    <string name="enter_father_name">Please Enter Applicant\'s father name</string>
    <string name="enter_mobile_no">Please Enter Mobile number</string>
    <string name="valid_mobile_no">Please Enter Valid Mobile number</string>
    <string name="enter_village_name">Please Enter Village name</string>
    <string name="enter_block_name">Please Enter Block name</string>
    <string name="enter_tehsil_name">Please Enter Tehsil name</string>
    <string name="enter_district_name">Please Enter District name</string>
    <string name="enter_pump_capacity">Please Enter Pump Capacity</string>
    <string name="enter_pump_ac_dc">Please Select Pump AC/DC</string>
    <string name="enter_pump_type">Please Select Pump Type</string>
    <string name="enter_conrtoller_type">Please Select Controller Type</string>
    <string name="enter_account_no">Please Enter Account Number</string>
    <string name="enter_ifsc_code">Please Enter IFSC Code</string>
    <string name="select_acknowledgment_challan_image">Please Select Acknowledgement Challan Details Image</string>
    <string name="select_land_proof">Please Select FARD (Land Proof) Image</string>
    <string name="select_beneficiary_id_proof">Please Select Beneficiary ID Proof Image</string>
    <string name="select_payment_receipt">Please Select Payment Receipt Image</string>
    <string name="select_attachment_5">Please Select Attachment 5 Image</string>
    <string name="select_attachment_6">Please Select Attachment 6 Image</string>
    <string name="select_pump_type">Select Pump Type</string>
    <string name="selec_pump_ac_dc">Select AC/DC Pump</string>
    <string name="selec_controller_type">Select Controller Type</string>
    <string name="sending_data_to_server">Sending Data to server..please wait !</string>
    <string name="data_save_in_local">Data saved In local database</string>
    <string name="file_not_valid">File not valid!</string>
    <string name="AC">AC</string>
    <string name="submersible">Submersible</string>
    <string name="Normal">Normal</string>
    <string name="BeneficiaryRegistration">BeneficiaryRegistration</string>
    <string name="size" translatable="false">Size :  %1$d</string>
    <string name="mime" translatable="false">Mime: %1$s</string>
    <string name="type" translatable="false">Type : %1$d</string>
    <string name="name" translatable="false">Name : %1$s</string>
    <string name="bucketname" translatable="false">BucketName : %1$s</string>
    <string name="beneficiary_id">Beneficiary Id</string>
    <string name="registration_no">Registration No.</string>
    <string name="address">Address</string>
    <string name="aadhar_no">Aadhar No.</string>
    <string name="dd_collection_image">DD Collection Image</string>
    <string name="remark">Remark</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="customer_name">Customer Name</string>
    <string name="photo_of_water_source">Photo of Water Source</string>
    <string name="document1">Document1</string>
    <string name="document2">Document2</string>
    <string name="length_and_diameter_of_discharge_pipe">Length and Diameter of Discharge Pipe</string>
    <string name="length_of_power_cabel">Length of Power Cabel</string>
    <string name="borewell_depth">Borewell Depth</string>
    <string name="size_of_borewell">Size of Borewell</string>
    <string name="contact_no">Contact No.</string>
    <string name="project_no">Project No.</string>
    <string name="Get_text">Get</string>
    <string name="Set_text">Set</string>
    <string name="Set_edt_scan">Scan or Enter material number</string>
    <string name="Scan_Device">Scan Device</string>
    <string name="pendingInstallationVerification">Pending Installation Verification</string>
    <string name="pendingUnloadingVerification">Pending Unloading Verification</string>
    <string name="otpVerification">Installation Verification</string>
    <string name="Loading">loading…</string>
    <string name="verify">Verify</string>
    <string name="verificationCodeSend">Verification Code Send</string>
    <string name="otp_send_successfully">verification code sent to your registerd number successfully</string>
    <string name="verificationCodeMatched">verification code verify successfully</string>
    <string name="check_internet_connection">Please Check your Internet Connection</string>
    <string name="photoGallery">Photo Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_image">Please Select Image</string>
    <string name="select_atlist_5_image">Please Select at-list 5 Images</string>
    <string name="select_all_image">Please Select All Images</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="display">Display</string>
    <string name="change">Change</string>
    <string name="want_to_perform">What operation do you want to perform?</string>
    <string name="selectCustomerPhoto">Please Select Customer Photo.</string>
    <string name="selectInvoicePhoto">Please Select Invoice Photo.</string>
    <string name="selectLR_photo">LR Photo</string>
    <string name="writeRemark">Please enter remark</string>
    <string name="notification_permission">Notification access required</string>
    <string name="notification_permission_txt">Please give access to receive notification for \nnew updates.</string>
    <string name="no_data_found">No Data Found</string>
    <string name="enter_quantity">Enter the quantity of serial no.</string>
    <string name="hint_quanty">Ex:- 1000</string>
</resources>