<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_130sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:elevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/select_image"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed-medium"/>
        <TextView
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed-medium"/>


        <TextView
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/gallery"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed-medium"/>


        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_red_dark"
            android:fontFamily="sans-serif-condensed-medium"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>