<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/submitBtn">


    <include layout="@layout/toolbar"/>

        <RelativeLayout
            android:id="@+id/searchRelative"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/popup_relative">
            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                app:queryHint="@string/action_search"
                app:defaultQueryHint="@string/action_search"
                android:backgroundTint="@color/colorPrimary"/>

        </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/routePlanList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>


    <TextView
        android:id="@+id/noDataFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data_found"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="@dimen/_14sdp"
        android:textColor="@android:color/black"/>


    <TextView
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/blue_btn_round"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_margin="@dimen/_10sdp"/>


</RelativeLayout>