<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:paddingTop="@dimen/_10sdp"
       android:paddingBottom="@dimen/_10sdp"
       android:layout_centerHorizontal="true"
       android:layout_centerVertical="true"
       android:background="@drawable/popup_relative"
       android:layout_margin="@dimen/_10sdp"
       android:padding="@dimen/_10sdp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="@dimen/_6sdp"
           android:layout_margin="@dimen/_2sdp"
           android:layout_gravity="center"
           android:text="@string/enter_quantity"
           android:fontFamily="sans-serif-medium"
           android:textColor="@color/black"
           android:textSize="15sp" />

       <EditText
           android:id="@+id/qtyTxt"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="@dimen/_10sdp"
           android:background="@drawable/edt_bg_shape"
           android:imeOptions="actionDone"
           android:inputType="number"
           android:maxLines="1"
           android:maxLength="4"
           android:hint="@string/hint_quanty"
           android:padding="@dimen/_10sdp"
           android:singleLine="true"
           android:textColor="@color/black"
           android:textSize="@dimen/_12sdp"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginBottom="@dimen/_10sdp"
           android:weightSum="2">

           <Button
               android:id="@+id/submit"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/submit"
               android:textColor="@color/white"
               android:textSize="@dimen/_12sdp"
               android:layout_marginLeft="@dimen/_5sdp"
               android:layout_marginRight="@dimen/_5sdp"
               android:background="@drawable/rounded_corner_blue"/>

           <Button
               android:id="@+id/cancel"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="Cancel"
               android:textColor="@color/white"
               android:textSize="@dimen/_12sdp"
               android:layout_marginLeft="@dimen/_5sdp"
               android:layout_marginRight="@dimen/_5sdp"
               android:background="@drawable/gray_round_corner"/>
       </LinearLayout>

   </LinearLayout>


</RelativeLayout>