<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:elevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_permission"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/notification_permission_txt"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/okLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/zxing_button_ok"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:background="@drawable/blue_btn_round"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cancelLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/cancel"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:background="@drawable/blue_btn_round" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>